Got kafka message producer working and refactored some things
